# ComfyUI-EZ-AF-Nodes

./: .gitignore  README.md  __init__.py  ez_af_nodes.py  pyproject.toml  workflow.json
CSV/: !README.txt  Styles.csv
CSV/example/: example.csv
examples/: workflow.json
