[project]
name = "comfyui-ez-af-nodes"
description = "This pack helps to conveniently control text in complex prompt-builder type workflows. Load/Read Prompts from .CSV; Concatenate large amounts of text; Use string input as ANY type. Requires pythongosssss custom scripts"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ez-af/ComfyUI-EZ-AF-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ez-af"
DisplayName = "ComfyUI-EZ-AF-Nodes"
Icon = ""
